<?xml version="1.0"?>
<package>
  <name>ros_companions</name>
  <version>0.1.0</version>
  <description>Companions for ros users.</description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
