<?xml version="1.0"?>
<package>
  <name>workspace_cadet</name>
  <version>0.1.0</version>
  <description>Tools for working in ROS workspaces.</description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
